--- a/company-comparer-fe/src/App.css
+++ b/company-comparer-fe/src/App.css
@@ -20,6 +20,11 @@
   border-right: 3px solid lightgrey;
 }
 
+.statement_header_cf {
+  text-align: left;
+  border-right: 3px solid lightgrey;
+}
+
 .grossprofit_header_is {
   font-weight: bold;
 }
